; ModuleID = '/home/carl/AnghaBench/php-src/Zend/extr_zend_cpuinfo.c_zend_cpu_startup.c'
source_filename = "/home/carl/AnghaBench/php-src/Zend/extr_zend_cpuinfo.c_zend_cpu_startup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i64 }

@cpuinfo = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zend_cpu_startup() #0 {
  %1 = alloca %struct.TYPE_4__, align 8
  %2 = alloca i32, align 4
  %3 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @cpuinfo, i32 0, i32 0), align 8
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %21, label %5

5:                                                ; preds = %0
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @cpuinfo, i32 0, i32 0), align 8
  %6 = call i32 @__zend_cpuid(i32 0, i32 0, %struct.TYPE_4__* @cpuinfo)
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @cpuinfo, i32 0, i32 1), align 4
  store i32 %7, i32* %2, align 4
  %8 = load i32, i32* %2, align 4
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %5
  br label %21

11:                                               ; preds = %5
  %12 = call i32 @__zend_cpuid(i32 1, i32 0, %struct.TYPE_4__* @cpuinfo)
  %13 = load i32, i32* %2, align 4
  %14 = icmp sge i32 %13, 7
  br i1 %14, label %15, label %19

15:                                               ; preds = %11
  %16 = call i32 @__zend_cpuid(i32 7, i32 0, %struct.TYPE_4__* %1)
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 2
  %18 = load i64, i64* %17, align 8
  store i64 %18, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @cpuinfo, i32 0, i32 2), align 8
  br label %20

19:                                               ; preds = %11
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @cpuinfo, i32 0, i32 2), align 8
  br label %20

20:                                               ; preds = %19, %15
  br label %21

21:                                               ; preds = %10, %20, %0
  ret void
}

declare dso_local i32 @__zend_cpuid(i32, i32, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
